# workflow_playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: clang-format.yml  cmake-format.yml
cmake/: CppCheck.cmake  Doxygen.cmake  Install.cmake  NoInSourceBuilds.cmake  Testing.cmake
src/: CMakeLists.txt
src/libzero/: CMakeLists.txt  version.cpp
src/runner/: CMakeLists.txt  runner.cpp
